Move crc calculations into individual modules
There were two functions that were only each used by one module, so
divide them up to simplify linking.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 	gensio_filter_ssl.h gensio_filter_telnet.h gensio_ll_ipmisol.h \
 	gensio_filter_certauth.h gensio_filter_msgdelim.h \
 	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
-	errtrig.h avahi_watcher.h gensio_net.h gensio_filter_kiss.h crc16.h \
+	errtrig.h avahi_watcher.h gensio_net.h gensio_filter_kiss.h \
 	gensio_filter_xlt.h gensio_filter_script.h \
 	gensio_ll_sound.h alsa_sound.h file_sound.h gensio_filter_ratelimit.h
 
@@ -31,7 +31,7 @@ libgensio_la_SOURCES = \
 	mdns.c avahi_watcher.c gensio_mdns.c \
 	gensio_addrinfo.c gensio_stdsock.c \
 	gensio_filter_kiss.c gensio_kiss.c \
-	crc16.c gensio_ax25_addr.c gensio_ax25.c \
+	gensio_ax25_addr.c gensio_ax25.c \
 	gensio_filter_xlt.c gensio_xlt.c gensio_keepopen.c \
 	gensio_filter_script.c gensio_script.c \
 	gensio_ll_sound.c gensio_sound.c \
