--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -14,7 +14,8 @@ libgensio_python_swig_la_SOURCES = gensio_python_swig.c
 libgensio_python_swig_la_CFLAGS = -DBUILDING_GENSIO_DLL $(AM_CFLAGS)
 libgensio_python_swig_la_LDFLAGS = -no-undefined
 libgensio_python_swig_la_LIBADD = $(PYTHON_LIBS) \
-		$(top_builddir)/lib/libgensio.la
+		$(top_builddir)/lib/libgensio.la \
+		$(top_builddir)/lib/libgensiomdns.la
 
 noinst_HEADERS = gensio_python.h python_swig_internals.h
 
@@ -32,7 +33,8 @@ pkgconfigexecdir = $(libdir)/pkgconfig
 pkgconfigexec_DATA = libgensio_python_swig.pc
 
 nodist__gensio_la_SOURCES = gensio_wrap.c
-_gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la $(OPENSSL_LIBS) \
+_gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la \
+		$(top_builddir)/lib/libgensiomdns.la  \
 		$(PYTHON_LIBS) libgensio_python_swig.la
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) -no-undefined
 
