--- a/c++/examples/Makefile.am
+++ b/c++/examples/Makefile.am
@@ -6,19 +6,17 @@ noinst_PROGRAMS = telnet_server telnet_client mdns
 telnet_server_SOURCES = telnet_server.cc
 
 telnet_server_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/lib/libgensiocpp.la \
-	$(OPENSSL_LIBS)
+	$(top_builddir)/c++/lib/libgensiocpp.la
 
 telnet_client_SOURCES = telnet_client.cc
 
 telnet_client_LDADD = $(top_builddir)/lib/libgensio.la \
-	$(top_builddir)/c++/lib/libgensiocpp.la \
-	$(OPENSSL_LIBS)
+	$(top_builddir)/c++/lib/libgensiocpp.la
 
 mdns_SOURCES = mdns.cc
 
 mdns_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/c++/lib/libgensiocpp.la \
-	$(OPENSSL_LIBS)
+	$(top_builddir)/c++/lib/libgensiomdnscpp.la
 
 EXTRA_DIST = CMakeLists.txt
