--- a/c++/include/gensio/Makefile.am
+++ b/c++/include/gensio/Makefile.am
@@ -1,4 +1,4 @@
 
-pkginclude_HEADERS = gensio gensio_dllvisibility
+pkginclude_HEADERS = gensio gensiomdns gensio_dllvisibility
 
-#EXTRA_DIST = CMakeLists.txt
+EXTRA_DIST = CMakeLists.txt
