--- a/c++/swig/go/examples/Makefile.am
+++ b/c++/swig/go/examples/Makefile.am
@@ -20,7 +20,9 @@ go.mod: example.go
 
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS)
 export CGO_CPPFLAGS = $(CPPFLAGS)
-export CGO_LDFLAGS = -L$(abs_top_builddir)/c++/lib/.libs -lgensiocpp -L$(abs_top_builddir)/lib/.libs -lgensio
+export CGO_LDFLAGS = -L$(abs_top_builddir)/c++/lib/.libs \
+	-lgensiocpp -lgensiomdnscpp \
+	-L$(abs_top_builddir)/lib/.libs -lgensio -lgensiomdns
 
 example: ../gensio/gensio.go \
 		../gensio/gensio_wrap.cxx \
