--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -30,23 +30,22 @@ noinst_HEADERS = ioinfo.h ser_ioinfo.h utils.h localports.h gtlssh.h
 
 gmdns_SOURCES = gensiomdns.c
 gmdns_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	@OPENSSL_LIBS@
+	$(top_builddir)/lib/libgensiomdns.la
 
 gensiot_SOURCES = gensiotool.c
 gensiot_LDADD = libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	@OPENSSL_LIBS@ @GLIB_LIB@ @GLIB_LIBS@ @TCL_LIB@ @TCL_LIBS@
+	@GLIB_LIB@ @GLIB_LIBS@ @TCL_LIB@ @TCL_LIBS@ @OPENSSL_LIBS@
 
 gtlssh_SOURCES = gtlssh.c
 gtlssh_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
-	@OPENSSL_LIBS@
+	$(top_builddir)/lib/libgensiomdns.la @OPENSSL_LIBS@
 
 gtlsshd_SOURCES = gtlsshd.c
 gtlsshd_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	@PAMLIB@ @OPENSSL_LIBS@
 
 gsound_SOURCES = gensio_sound.c
-gsound_LDADD = $(top_builddir)/lib/libgensio.la libgensiotool.a \
-	@OPENSSL_LIBS@
+gsound_LDADD = $(top_builddir)/lib/libgensio.la libgensiotool.a
 
 manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1 gmdns.1 \
 	greflector.1 gsound.1
