c++:swig:go: Use top_builddir,not abs_top_builddir, when compiling go
The abs version didn't add C:/, so it wasn't working with go.  Just use
the relative one, as it should work fine.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/c++/swig/go/examples/Makefile.am
+++ b/c++/swig/go/examples/Makefile.am
@@ -20,9 +20,9 @@ go.mod: example.go
 
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS)
 export CGO_CPPFLAGS = $(CPPFLAGS)
-export CGO_LDFLAGS = -L$(abs_top_builddir)/c++/lib/.libs \
+export CGO_LDFLAGS = -L$(top_builddir)/c++/lib/.libs \
 	-lgensiocpp -lgensiomdnscpp \
-	-L$(abs_top_builddir)/lib/.libs -lgensio -lgensiomdns
+	-L$(top_builddir)/lib/.libs -lgensio -lgensiomdns
 
 example: ../gensio/gensio.go \
 		../gensio/gensio_wrap.cxx \
