--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -56,7 +56,7 @@ man1_MANS = gensiot.1 @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@ @GMDNSMAN@ \
 man8_MANS = @GTLSSHDMAN@
 endif
 
-EXTRA_DIST = $(manpages) CMakeLists.txt gtlssync
+EXTRA_DIST = $(manpages) gtlssync
 
 clean-local:
 	rm -f gtlssh-keygen greflector
