--- a/c++/swig/go/tests/Makefile.am
+++ b/c++/swig/go/tests/Makefile.am
@@ -35,16 +35,33 @@ go.mod: $(TEST_SRCS)
 	go mod edit -replace testbase=./testbase
 	go mod tidy
 
+MORE_LIBS=
+if BUILTIN_MDNS
+MORE_LIBS += $(MDNS_LIBS)
+endif
+if BUILTIN_SOUND
+MORE_LIBS += $(SOUND_LIBS)
+endif
+if BUILTIN_SCTP
+MORE_LIBS += $(LIBSCTP_LIBS)
+endif
+if BUILTIN_SSL
+MORE_LIBS += $(OPENSSL_LIBS)
+endif
+if BUILTIN_IPMISOL
+MORE_LIBS += $(OPENIPMI_LIBS)
+endif
 export CGO_CXXFLAGS = $(CXXFLAGS) $(AM_CXXFLAGS)
 export CGO_CPPFLAGS = $(CPPFLAGS)
 export CGO_LDFLAGS = -L$(top_builddir)/c++/lib/.libs \
 	-lgensiocpp -lgensiomdnscpp \
-	-L$(top_builddir)/lib/.libs -lgensio -lgensiomdns
+	-L$(top_builddir)/lib/.libs -lgensio -lgensiomdns $(MORE_LIBS)
 
 test_basic: ../gensio/gensio.go \
 		../gensio/gensio_wrap.cxx \
 		../gensio/gensio_wrap.h \
 		test_basic.go ../gensio/gensioapi.go go.mod
+	echo $(MORE_LIBS)
 	go build test_basic.go
 
 test_ax25: ../gensio/gensio.go \
