mdns: Fix .pc file
It didn't list libgensiomdns in it.  So things using it would break.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/libgensiomdns.pc.in
+++ b/lib/libgensiomdns.pc.in
@@ -6,4 +6,4 @@ includedir=@includedir@
 Name: libgensiomdns
 Description: A gensiolibrary to abstract MDNS interfaces
 Version: @VERSION@
-Libs: -L${libdir} -lgensio @MDNS_LIBS@ @LIBS@
+Libs: -L${libdir} -lgensiomdns -lgensio @MDNS_LIBS@ @LIBS@
